--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "pretest": "npm run lint && npm run build",
     "dev": "ts-node ./src/bin/actionhero",
     "start": "node ./dist/bin/actionhero",
-    "build": "tsc --declaration",
+    "build": "rm -rf dist && ./node_modules/.bin/tsc --declaration",
     "docs": "typedoc --out docs --theme default --mode file --media tutorials",
     "lint": "prettier --check src/*/**.ts __test__/*/**.ts examples/*/**.ts config",
     "pretty": "prettier --write src/*/**.ts __test__/*/**.ts examples/*/**.ts config"
