--- a/package.json
+++ b/package.json
@@ -50,9 +50,9 @@
     "ws": "^7.2.0"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.22",
     "@types/glob": "^7.1.1",
     "@types/ioredis": "^4.0.19",
+    "@types/jest": "^24.0.22",
     "@types/node": "^12.12.7",
     "@types/uuid": "^3.4.6",
     "docdash": "1.1.1",
@@ -62,7 +62,7 @@
     "request": "^2.88.0",
     "request-promise-native": "^1.0.8",
     "ts-jest": "^24.1.0",
-    "ts-node": "^8.5.0",
+    "ts-node-dev": "^1.0.0-pre.44",
     "typedoc": "^0.15.1",
     "typedoc-plugin-tutorials": "0.0.1-alpha.1",
     "typescript": "^3.7.2"
@@ -84,7 +84,7 @@
     "test": "jest",
     "prepare": "npm run build && npm run docs",
     "pretest": "npm run lint && npm run build",
-    "dev": "ts-node ./src/bin/actionhero",
+    "dev": "ts-node-dev --transpile-only ./src/bin/actionhero",
     "start": "node ./dist/bin/actionhero",
     "build": "rm -rf dist && ./node_modules/.bin/tsc --declaration",
     "docs": "typedoc --out docs --theme default --mode file --media tutorials",
