--- a/templates/package.json.template
+++ b/templates/package.json.template
@@ -19,11 +19,11 @@
     "jest": "latest",
     "prettier": "latest",
     "ts-jest": "latest",
-    "ts-node": "latest",
+    "ts-node-dev": "latest",
     "typescript": "latest"
   },
   "scripts": {
-    "dev": "ts-node ./node_modules/.bin/actionhero start",
+    "dev": "ts-node-dev --transpile-only ./node_modules/.bin/actionhero start",
     "start": "actionhero start",
     "actionhero": "actionhero",
     "test": "jest",
