--- a/package.json
+++ b/package.json
@@ -64,7 +64,6 @@
     "ts-jest": "^24.2.0",
     "ts-node-dev": "^1.0.0-pre.44",
     "typedoc": "^0.15.3",
-    "typedoc-plugin-tutorials": "0.0.1-alpha.1",
     "typescript": "^3.7.2"
   },
   "optionalDependencies": {},
@@ -87,7 +86,7 @@
     "dev": "ts-node-dev --transpile-only ./src/bin/actionhero",
     "start": "node ./dist/bin/actionhero",
     "build": "rm -rf dist && ./node_modules/.bin/tsc --declaration",
-    "docs": "typedoc --out docs --theme default --mode file --media tutorials",
+    "docs": "typedoc --out docs --theme default --mode file",
     "lint": "prettier --check src/*/**.ts __test__/*/**.ts examples/*/**.ts config",
     "pretty": "prettier --write src/*/**.ts __test__/*/**.ts examples/*/**.ts config"
   }
