must build prokect after install for CLI commands to work

--- a/templates/package.json.template
+++ b/templates/package.json.template
@@ -23,6 +23,7 @@
     "typescript": "latest"
   },
   "scripts": {
+    "postinstall": "npm run build",
     "dev": "ts-node-dev --transpile-only ./node_modules/.bin/actionhero start",
     "start": "actionhero start",
     "actionhero": "actionhero",
