--- a/templates/package.json.template
+++ b/templates/package.json.template
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "postinstall": "npm run build",
-    "dev": "ts-node-dev --transpile-only ./node_modules/.bin/actionhero start",
+    "dev": "ts-node-dev --no-deps --transpile-only ./node_modules/.bin/actionhero start",
     "start": "actionhero start",
     "actionhero": "actionhero",
     "test": "jest",
