--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,16 @@
 version: "3.1"
 services:
   redis:
-    image: redis
+    image: 'bitnami/redis:latest'
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    networks:
+      - actionhero_backend
+
+  redis_sentinel:
+    image: 'bitnami/redis-sentinel:latest'
+    environment:
+      - REDIS_MASTER_HOST=redis
     networks:
       - actionhero_backend
 
@@ -13,9 +22,9 @@ services:
       - 8080
     environment:
       SERVICE_PORTS: 8080
-      REDIS_HOST: redis
+      REDIS_HOST: redis_sentinel
     depends_on:
-      - redis
+      - redis_sentinel
     deploy:
       mode: replicated
       replicas: 3
