--- a/package.json
+++ b/package.json
@@ -82,8 +82,8 @@
     "test": "jest",
     "prepare": "npm run build && npm run docs",
     "pretest": "npm run lint && npm run build",
-    "dev": "ts-node-dev --transpile-only --no-deps ./src/bin/actionhero",
-    "start": "node ./dist/bin/actionhero",
+    "dev": "ts-node-dev --transpile-only --no-deps ./src/server",
+    "start": "node ./dist/server.js",
     "build": "rm -rf dist && ./node_modules/.bin/tsc --declaration",
     "docs": "typedoc --out docs --theme default --mode file",
     "lint": "prettier --check src/**/*.ts __test__/**/*.ts examples/**/*.ts config",
