--- a/templates/package.json.template
+++ b/templates/package.json.template
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/node": "latest",
+    "@types/ioredis": "latest",
     "@types/jest": "latest",
     "jest": "latest",
     "prettier": "latest",
