add a dev npm script to help debugging

--- a/package.json
+++ b/package.json
@@ -83,8 +83,9 @@
     "prepare": "npm run build && npm run docs",
     "pretest": "npm run lint && npm run build",
     "dev": "ts-node-dev --transpile-only --no-deps ./src/server",
+    "debug": "ts-node-dev --transpile-only --no-deps --inspect -- ./src/server ",
     "start": "node ./dist/server.js",
-    "build": "rm -rf dist && ./node_modules/.bin/tsc --declaration",
+    "build": "rm -rf dist && ./node_modules/.bin/tsc --sourceMap false --declaration",
     "docs": "typedoc --out docs --theme default --mode file",
     "lint": "prettier --check src/**/*.ts __test__/**/*.ts examples/**/*.ts config",
     "pretty": "prettier --write src/**/*.ts __test__/**/*.ts examples/**/*.ts config"
