--- a/package.json
+++ b/package.json
@@ -33,21 +33,21 @@
   "dependencies": {
     "@types/glob": "^7.1.1",
     "@types/ioredis": "^4.14.9",
-    "@types/node": "^13.9.1",
-    "@types/uuid": "^7.0.0",
+    "@types/node": "^13.9.3",
+    "@types/uuid": "^7.0.2",
     "browser_fingerprint": "^2.0.1",
     "dot-prop": "^5.2.0",
     "etag": "^1.8.1",
     "formidable": "^1.2.2",
     "glob": "^7.1.6",
-    "i18n": "^0.8.5",
+    "i18n": "^0.8.6",
     "ioredis": "^4.16.0",
     "is-running": "^2.1.0",
     "mime": "^2.4.4",
-    "node-resque": "^7.0.1",
+    "node-resque": "^7.0.2",
     "optimist": "^0.6.1",
     "primus": "^7.3.4",
-    "qs": "^6.9.1",
+    "qs": "^6.9.2",
     "uglify-js": "^3.8.0",
     "uuid": "^7.0.2",
     "winston": "^3.2.1",
@@ -57,12 +57,12 @@
     "@types/jest": "^25.1.4",
     "jest": "^25.1.0",
     "jest-environment-webdriver": "^0.2.0",
-    "prettier": "^1.19.1",
+    "prettier": "^2.0.1",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.8",
     "ts-jest": "^25.2.1",
     "ts-node-dev": "^1.0.0-pre.44",
-    "typedoc": "^0.17.0",
+    "typedoc": "^0.17.3",
     "typescript": "^3.8.3"
   },
   "optionalDependencies": {},
@@ -87,7 +87,7 @@
     "start": "node ./dist/server.js",
     "build": "rm -rf dist && ./node_modules/.bin/tsc --sourceMap false --declaration",
     "docs": "typedoc --out docs --theme default --mode file",
-    "lint": "prettier --check src/**/*.ts __test__/**/*.ts examples/**/*.ts config",
-    "pretty": "prettier --write src/**/*.ts __test__/**/*.ts examples/**/*.ts config"
+    "lint": "prettier --check src/**/*.ts __tests__/**/*.ts",
+    "pretty": "prettier --write src/**/*.ts __tests__/**/*.ts"
   }
 }
