update all files to new prettier default style

--- a/templates/package.json.template
+++ b/templates/package.json.template
@@ -30,8 +30,8 @@
     "test": "jest",
     "pretest": "npm run build && npm run lint",
     "build": "tsc --sourceMap false --declaration",
-    "lint": "prettier --check src/*/** __test__/*/**",
-    "pretty": "prettier --write src/*/** __test__/*/**"
+    "lint": "prettier --check src/*/** __tests__/*/**",
+    "pretty": "prettier --write src/*/** __tests__/*/**"
   },
   "jest": {
     "testEnvironment": "node",
