debug command should invoke tsc first

--- a/templates/package.json.template
+++ b/templates/package.json.template
@@ -24,7 +24,7 @@
   "scripts": {
     "postinstall": "npm run build",
     "dev": "ts-node-dev --no-deps --transpile-only ./src/server",
-    "debug": "ts-node-dev --transpile-only --no-deps --inspect -- ./src/server ",
+    "debug": "tsc && ts-node-dev --transpile-only --no-deps --inspect -- ./src/server ",
     "start": "node ./dist/server.js",
     "actionhero": "actionhero",
     "test": "jest",
