--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on: [push]
 jobs:
   test:
     runs-on: ubuntu-latest
-    container: ubuntu-latest
+    container: node
 
     services:
       redis:
