--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,9 @@ jobs:
           --health-timeout 5s
           --health-retries 5
 
+      selenium:
+        image: selenium/standalone-chrome
+
     strategy:
       matrix:
         node-version: [10.x, 12.x, 14.x]
@@ -31,3 +34,5 @@ jobs:
           CI: true
           REDIS_HOST: redis
           REDIS_PORT: 6379
+          SELENIUM_REMOTE_URL: http://localhost:4444/wd/hub
+          maxMemoryAlloted: 1000
