--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,8 @@ jobs:
 
     services:
       redis:
-        image: redis
+        ports:
+          - 6379:6379
         options: >-
           --health-cmd "redis-cli ping"
           --health-interval 10s
@@ -16,6 +17,8 @@ jobs:
 
       selenium:
         image: selenium/standalone-chrome
+        ports:
+          - 4444:4444
 
     strategy:
       matrix:
