--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
   },
   "jest": {
     "testPathIgnorePatterns": [
-      "<rootDir>/__tests__/testPlugin"
+      "<rootDir>/__tests__/testPlugin",
+      "<rootDir>/tmp"
     ],
     "transform": {
       "^.+\\.ts?$": "ts-jest"
