--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,45 @@
 name: Test
-on: [push, pull_request]
+on: [push]
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    container:
+      image: node
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js 14.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14.x
+      - run: npm ci
+      - name: cache node modules
+        uses: actions/cache@v1
+        with:
+          path: node_modules
+          key: cache-${{ hashFiles('**/package-lock.json') }}
+
+  lint:
+    runs-on: ubuntu-latest
+    needs: build
+    container:
+      image: node
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js 14.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14.x
+      - name: download node module cache
+        uses: actions/cache@v1
+        with:
+          path: node_modules
+          key: cache-${{ hashFiles('**/package-lock.json') }}
+      - run: npm run lint
+
   test:
     runs-on: ubuntu-latest
+    needs: lint
     container:
       image: node
       options: --network-alias main
@@ -25,17 +61,12 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: node --version
-      - run: npm --version
-      - name: Cache node modules
-        uses: actions/cache@v1
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-node${{ matrix.node-version }}-${{ hashFiles('**/package-lock.json') }}
-      - run: npm ci
-      - run: npm run lint
+      - name: download node module cache
+      uses: actions/cache@v1
+      with:
+        path: node_modules
+        key: cache-${{ hashFiles('**/package-lock.json') }}
+      - run: npm rebuild
       - run: ./node_modules/.bin/jest --ci
         env:
           REDIS_HOST: redis
