--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
           path: |
             node_modules
             dist
-          key: cache-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-cache-${{ hashFiles('**/package-lock.json') }}
 
   lint:
     runs-on: ubuntu-latest
@@ -38,7 +38,7 @@ jobs:
           path: |
             node_modules
             dist
-          key: cache-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-cache-${{ hashFiles('**/package-lock.json') }}
       - run: npm run lint
 
   test:
@@ -71,7 +71,7 @@ jobs:
           path: |
             node_modules
             dist
-          key: cache-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-cache-${{ hashFiles('**/package-lock.json') }}
       - run: npm rebuild
       - run: ./node_modules/.bin/jest --ci
         env:
