use github-push-action to publish docs

--- a/.github/workflows/publish_docs.yml
+++ b/.github/workflows/publish_docs.yml
@@ -16,3 +16,8 @@ jobs:
           node-version: 14.x
       - run: npm ci
       - run: ./bin/deploy-docs
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages
