--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "Evan Tahler <evantahler@gmail.com>",
   "name": "actionhero",
-  "description": "actionhero.js is a multi-transport API Server with integrated cluster capabilities and delayed tasks",
+  "description": "The reusable, scalable, and quick node.js API server for stateless and stateful applications",
   "version": "22.1.1",
   "homepage": "http://www.actionherojs.com",
   "license": "Apache-2.0",
