await the import of Actionhro so it is simpler to modify env

--- a/templates/projectServer.ts.template
+++ b/templates/projectServer.ts.template
@@ -1,14 +1,14 @@
 #!/usr/bin/env node
-import { Process } from "actionhero";
 
 // load any custom code, configure the env, as needed
 
 async function main() {
   // create a new actionhero process
+  const { Process } = await import("actionhero");
   const app = new Process();
 
   // handle unix signals and uncaught exceptions & rejections
-  app.registerProcessSignals(exitCode => {
+  app.registerProcessSignals((exitCode) => {
     process.exit(exitCode);
   });
 
