--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,9 +47,29 @@ jobs:
           key: ${{ runner.os }}-cache-${{ github.sha }}
       - run: npm run lint
 
+  docs:
+    runs-on: ubuntu-latest
+    needs: build
+    container:
+      image: node
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js 14.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14.x
+      - name: download cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            node_modules
+            dist
+          key: ${{ runner.os }}-cache-${{ github.sha }}
+      - run: npm run docs
+
   test:
     runs-on: ubuntu-latest
-    needs: lint
+    needs: build
     container:
       image: node
       options: --network-alias main
@@ -88,6 +108,6 @@ jobs:
 
   complete:
     runs-on: ubuntu-latest
-    needs: test
+    needs: [lint, docs, test]
     steps:
       - run: echo "Done!"
