--- a/package.json
+++ b/package.json
@@ -55,9 +55,10 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.10",
+    "@types/puppeteer": "^3.0.1",
     "jest": "^26.4.0",
-    "jest-environment-webdriver": "^0.2.0",
     "prettier": "^2.0.5",
+    "puppeteer": "^5.2.1",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
     "ts-jest": "^26.2.0",
