Update Dockerfile base image to node:alpine (#1583)
* Update the Dockerfile to use the latest Node image instead of base alpine.

Signed-off-by: Greg Coonrod <greg.coonrod@gmail.com>

* Switching to node:alpine in Dockerfile and updating compose config to include volumes for node_modules and dist. Also ensuring that the compose config for the local build options mirrors the config for using the published actionhero image.

Signed-off-by: Greg Coonrod <greg.coonrod@gmail.com>

* Removing volumes per code review comments.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,13 +27,22 @@ services:
   #
   # actionhero:
   #   build: ./
+  #   image: actionhero
   #   ports:
-  #     - 80:8080
+  #     - 8080
   #   environment:
-  #     TCP_PORTS: 8080
+  #     SERVICE_PORTS: 8080
   #     REDIS_HOST: redis
   #     REDIS_PORT: 6379
   #     REDIS_DB: 0
+  #   depends_on:
+  #     - redis
+  #   deploy:
+  #     mode: replicated
+  #     replicas: 3
+  #   networks:
+  #     - actionhero_frontend
+  #     - actionhero_backend
 
   proxy:
     image: dockercloud/haproxy
