--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
   },
   "dependencies": {
     "@types/glob": "^7.1.3",
-    "@types/ioredis": "^4.17.5",
-    "@types/node": "^14.11.8",
+    "@types/ioredis": "^4.17.7",
+    "@types/node": "^14.14.6",
     "@types/uuid": "^8.3.0",
     "browser_fingerprint": "^2.0.2",
     "dot-prop": "^6.0.0",
@@ -41,29 +41,29 @@
     "formidable": "^1.2.2",
     "glob": "^7.1.6",
     "i18n": "^0.13.2",
-    "ioredis": "^4.17.3",
+    "ioredis": "^4.19.2",
     "is-running": "^2.1.0",
     "mime": "^2.4.6",
-    "node-resque": "^8.0.0",
+    "node-resque": "^8.0.1",
     "optimist": "^0.6.1",
-    "primus": "^7.3.5",
+    "primus": "^8.0.0",
     "qs": "^6.9.4",
-    "uglify-js": "^3.11.2",
+    "uglify-js": "^3.11.4",
     "uuid": "^8.3.1",
     "winston": "^3.3.3",
     "ws": "^7.3.1"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.14",
-    "jest": "^26.5.3",
+    "@types/jest": "^26.0.15",
+    "jest": "^26.6.1",
     "jest-environment-webdriver": "^0.2.0",
     "prettier": "^2.1.2",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
-    "ts-jest": "^26.4.1",
-    "ts-node-dev": "^1.0.0-pre.63",
+    "ts-jest": "^26.4.3",
+    "ts-node-dev": "^1.0.0",
     "typedoc": "^0.19.2",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.5"
   },
   "optionalDependencies": {},
   "bin": {
