--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
   },
   "dependencies": {
     "@types/glob": "^7.1.3",
-    "@types/ioredis": "^4.17.7",
-    "@types/node": "^14.14.6",
+    "@types/ioredis": "^4.17.8",
+    "@types/node": "^14.14.7",
     "@types/uuid": "^8.3.0",
     "browser_fingerprint": "^2.0.2",
     "dot-prop": "^6.0.0",
@@ -42,16 +42,17 @@
     "glob": "^7.1.6",
     "i18n": "^0.13.2",
     "ioredis": "^4.19.2",
+    "ioredis-mock": "^5.1.0",
     "is-running": "^2.1.0",
     "mime": "^2.4.6",
-    "node-resque": "^8.0.3",
+    "node-resque": "^8.1.0",
     "optimist": "^0.6.1",
     "primus": "^8.0.0",
     "qs": "^6.9.4",
-    "uglify-js": "^3.11.5",
+    "uglify-js": "^3.11.6",
     "uuid": "^8.3.1",
     "winston": "^3.3.3",
-    "ws": "^7.3.1"
+    "ws": "^7.4.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
@@ -61,7 +62,7 @@
     "puppeteer": "^5.5.0",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
-    "ts-jest": "^26.4.3",
+    "ts-jest": "^26.4.4",
     "ts-node-dev": "^1.0.0",
     "typedoc": "^0.19.2",
     "typescript": "^4.0.5"
