give a title to install steps

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -95,7 +95,8 @@ jobs:
             node_modules
             dist
           key: ${{ runner.os }}-cache-${{ github.sha }}
-      - run: apt-get update && apt-get install -y libgtk2.0-0 libgtk-3-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb libgbm-dev
+      - name: install puppeteer dependencies
+        run: apt-get update && apt-get install -y libgtk2.0-0 libgtk-3-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb libgbm-dev
       - run: npm rebuild
       - run: ./node_modules/.bin/jest --ci
         env:
