--- a/package.json
+++ b/package.json
@@ -55,9 +55,10 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
+    "@types/puppeteer": "^5.4.0",
     "jest": "^26.6.3",
-    "jest-environment-webdriver": "^0.2.0",
     "prettier": "^2.1.2",
+    "puppeteer": "^5.5.0",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
     "ts-jest": "^26.4.3",
