--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/node": "^14.14.10",
     "@types/uuid": "^8.3.0",
     "browser_fingerprint": "^2.0.2",
+    "commander": "^6.2.0",
     "dot-prop": "^6.0.1",
     "etag": "^1.8.1",
     "formidable": "^1.2.2",
