--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Evan Tahler <evantahler@gmail.com>",
   "name": "actionhero",
   "description": "The reusable, scalable, and quick node.js API server for stateless and stateful applications",
-  "version": "25.0.0-alpha.5",
+  "version": "25.0.0",
   "homepage": "http://www.actionherojs.com",
   "license": "Apache-2.0",
   "repository": {
@@ -31,10 +31,6 @@
     "node": ">=8.0.0"
   },
   "dependencies": {
-    "@types/glob": "^7.1.3",
-    "@types/ioredis": "^4.17.8",
-    "@types/node": "^14.14.10",
-    "@types/uuid": "^8.3.0",
     "browser_fingerprint": "^2.0.2",
     "commander": "^6.2.0",
     "dot-prop": "^6.0.1",
@@ -51,20 +47,24 @@
     "primus": "^8.0.0",
     "qs": "^6.9.4",
     "uglify-js": "^3.12.1",
-    "uuid": "^8.3.1",
+    "uuid": "^8.3.2",
     "winston": "^3.3.3",
     "ws": "^7.4.1"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.16",
-    "@types/puppeteer": "^5.4.1",
+    "@types/glob": "^7.1.3",
+    "@types/ioredis": "^4.17.8",
+    "@types/node": "^14.14.12",
+    "@types/uuid": "^8.3.0",
+    "@types/jest": "^26.0.19",
+    "@types/puppeteer": "^5.4.2",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "puppeteer": "^5.5.0",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
     "ts-jest": "^26.4.4",
-    "ts-node-dev": "^1.0.0",
+    "ts-node-dev": "^1.1.1",
     "typedoc": "^0.19.2",
     "typescript": "^4.1.2"
   },
