--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "task",
     "delay",
     "service",
-    "tcp"
+    "tcp",
+    "background",
+    "framework",
+    "typescript"
   ],
   "engines": {
     "node": ">=8.0.0"
   },
   "dependencies": {
-    "@types/ioredis": "^4.17.9",
+    "@types/ioredis": "^4.17.10",
     "browser_fingerprint": "^2.0.2",
     "commander": "^6.2.1",
     "dot-prop": "^6.0.1",
@@ -47,14 +50,14 @@
     "optimist": "^0.6.1",
     "primus": "^8.0.1",
     "qs": "^6.9.4",
-    "uglify-js": "^3.12.2",
+    "uglify-js": "^3.12.3",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
     "ws": "^7.4.1"
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
-    "@types/node": "^14.14.14",
+    "@types/node": "^14.14.16",
     "@types/uuid": "^8.3.0",
     "@types/jest": "^26.0.19",
     "@types/puppeteer": "^5.4.2",
@@ -65,7 +68,7 @@
     "request-promise-native": "^1.0.9",
     "ts-jest": "^26.4.4",
     "ts-node-dev": "^1.1.1",
-    "typedoc": "^0.19.2",
+    "typedoc": "^0.20.1",
     "typescript": "^4.1.3"
   },
   "optionalDependencies": {},
@@ -90,7 +93,7 @@
     "debug": "tsc && ts-node-dev --transpile-only --no-deps --inspect -- ./src/server ",
     "start": "node ./dist/server.js",
     "build": "rm -rf dist && ./node_modules/.bin/tsc --sourceMap false --declaration",
-    "docs": "typedoc --out docs --theme default --mode file",
+    "docs": "typedoc --out docs --theme default src/index.ts",
     "lint": "prettier --check src __tests__",
     "pretty": "prettier --write src __tests__"
   }
