--- a/package.json
+++ b/package.json
@@ -42,34 +42,34 @@
     "formidable": "^1.2.2",
     "glob": "^7.1.6",
     "i18n": "^0.13.2",
-    "ioredis": "^4.19.4",
+    "ioredis": "^4.22.0",
     "ioredis-mock": "^5.2.1",
     "is-running": "^2.1.0",
     "mime": "^2.5.0",
-    "node-resque": "^8.2.2",
+    "node-resque": "^8.2.3",
     "optimist": "^0.6.1",
     "primus": "^8.0.1",
     "qs": "^6.9.6",
-    "uglify-js": "^3.12.6",
+    "uglify-js": "^3.12.7",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
-    "ws": "^7.4.2"
+    "ws": "^7.4.3"
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
-    "@types/node": "^14.14.22",
-    "@types/uuid": "^8.3.0",
     "@types/jest": "^26.0.20",
-    "@types/puppeteer": "^5.4.2",
+    "@types/node": "^14.14.25",
+    "@types/puppeteer": "^5.4.3",
+    "@types/uuid": "^8.3.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
-    "puppeteer": "^5.5.0",
+    "puppeteer": "^7.0.4",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
-    "ts-jest": "^26.5.0",
+    "ts-jest": "^26.5.1",
     "ts-node-dev": "^1.1.1",
-    "typedoc": "^0.20.20",
-    "typescript": "^4.1.3"
+    "typedoc": "^0.20.24",
+    "typescript": "^4.1.5"
   },
   "optionalDependencies": {},
   "bin": {
@@ -86,7 +86,7 @@
   },
   "scripts": {
     "postinstall": "echo 'To generate a new actionhero project, run \"npx actionhero generate\"'",
-    "test": "jest",
+    "test": "jest --maxWorkers 5",
     "prepare": "npm run build && npm run docs",
     "pretest": "npm run lint && npm run build",
     "dev": "ts-node-dev --transpile-only --no-deps ./src/server",
