--- a/templates/test/action.ts.template
+++ b/templates/test/action.ts.template
@@ -1,11 +1,10 @@
 import { Process, specHelper } from "actionhero";
 const actionhero = new Process();
-let api;
 
 describe("Action", () => {
   describe("%%name%%", () => {
     beforeAll(async () => {
-      api = await actionhero.start();
+      await actionhero.start();
     });
 
     afterAll(async () => {
