--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "node": ">=12.0.0"
   },
   "dependencies": {
-    "@types/ioredis": "^4.26.4",
     "browser_fingerprint": "^2.0.3",
     "commander": "^7.2.0",
     "dot-prop": "^6.0.1",
@@ -57,8 +56,10 @@
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
+    "@types/ioredis": "^4.26.4",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.3.0",
+    "@types/primus": "^7.3.4",
     "@types/puppeteer": "^5.4.3",
     "@types/uuid": "^8.3.0",
     "jest": "^26.6.3",
