--- a/package.json
+++ b/package.json
@@ -56,21 +56,21 @@
     "ws": "^7.4.5"
   },
   "devDependencies": {
-    "@types/glob": "^7.1.3",
-    "@types/jest": "^26.0.23",
-    "@types/node": "^15.3.0",
-    "@types/primus": "^7.3.4",
-    "@types/puppeteer": "^5.4.3",
-    "@types/uuid": "^8.3.0",
-    "jest": "^26.6.3",
-    "prettier": "^2.3.0",
-    "puppeteer": "^9.1.1",
-    "request": "^2.88.2",
-    "request-promise-native": "^1.0.9",
-    "ts-jest": "^26.5.6",
-    "ts-node-dev": "^1.1.6",
-    "typedoc": "^0.20.36",
-    "typescript": "^4.2.4"
+    "@types/glob": "7.1.3",
+    "@types/jest": "26.0.23",
+    "@types/node": "15.6.1",
+    "@types/primus": "7.3.4",
+    "@types/puppeteer": "5.4.3",
+    "@types/uuid": "8.3.0",
+    "jest": "26.6.3",
+    "prettier": "2.3.0",
+    "puppeteer": "9.1.1",
+    "request": "2.88.2",
+    "request-promise-native": "1.0.9",
+    "ts-jest": "26.5.6",
+    "ts-node-dev": "1.1.6",
+    "typedoc": "0.20.36",
+    "typescript": "4.2.4"
   },
   "bin": {
     "actionhero": "dist/bin/actionhero.js"
