--- a/package.json
+++ b/package.json
@@ -62,12 +62,12 @@
     "@types/primus": "^7.3.4",
     "@types/puppeteer": "^5.4.3",
     "@types/uuid": "^8.3.0",
-    "jest": "^26.6.3",
+    "jest": "^27.0.1",
     "prettier": "^2.3.0",
     "puppeteer": "^9.1.1",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
-    "ts-jest": "^26.5.6",
+    "ts-jest": "^27.0.0-next.12",
     "ts-node-dev": "^1.1.6",
     "typedoc": "^0.20.36",
     "typescript": "^4.2.4"
