--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "puppeteer": "^9.1.1",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
-    "ts-jest": "^27.0.0-next.12",
+    "ts-jest": "^27.0.0",
     "ts-node-dev": "^1.1.6",
     "typedoc": "^0.20.36",
     "typescript": "^4.2.4"
