--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           node-version: 14.x
       - run: npm ci
+      - run: npm ls
       - name: save cache
         uses: actions/cache@v2
         with:
