--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -108,3 +108,11 @@ jobs:
     needs: [lint, docs, test]
     steps:
       - run: echo "Done!"
+      
+  automerge:
+    needs: complete
+    runs-on: ubuntu-latest
+    steps:
+      - uses: fastify/github-action-merge-dependabot@v2.0.0
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
