--- a/templates/test/action.ts.template
+++ b/templates/test/action.ts.template
@@ -3,13 +3,8 @@ import { Process, specHelper } from "actionhero";
 describe("Action: %%name%%", () => {
   const actionhero = new Process();
 
-  beforeAll(async () => {
-    await actionhero.start();
-  });
-
-  afterAll(async () => {
-    await actionhero.stop();
-  });
+  beforeAll(async () => await actionhero.start());
+  afterAll(async () => await actionhero.stop());
 
   test("returns OK", async () => {
     const { ok } = await specHelper.runAction("%%name%%");
