--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "actionhero": "dist/bin/actionhero.js"
   },
   "jest": {
+    "maxWorkers": "50%",
     "testPathIgnorePatterns": [
       "<rootDir>/__tests__/testPlugin",
       "<rootDir>/tmp"
@@ -86,7 +87,7 @@
   },
   "scripts": {
     "postinstall": "echo 'To generate a new actionhero project, run \"npx actionhero generate\"'",
-    "test": "jest --maxWorkers 50%",
+    "test": "jest",
     "prepare": "npm run build && npm run docs",
     "pretest": "npm run lint && npm run build",
     "dev": "ts-node-dev --transpile-only --no-deps ./src/server",
