--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "ioredis-mock": "^5.6.0",
     "is-running": "^2.1.0",
     "mime": "^2.5.2",
-    "node-resque": "^9.1.0-alpha.1",
+    "node-resque": "^9.1.0-alpha.2",
     "optimist": "^0.6.1",
     "primus": "^8.0.4",
     "qs": "^6.10.1",
@@ -59,6 +59,7 @@
     "@types/glob": "^7.1.4",
     "@types/i18n": "^0.13.1",
     "@types/jest": "^26.0.24",
+    "@types/mime": "^2.0.3",
     "@types/node": "^15.12.4",
     "@types/optimist": "^0.0.30",
     "@types/primus": "^7.3.5",
