Remove i18n, work to compilation

--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "etag": "^1.8.1",
     "formidable": "^1.2.2",
     "glob": "^7.1.7",
-    "i18n": "^0.13.3",
     "ioredis": "^4.27.6",
     "ioredis-mock": "^5.6.0",
     "is-running": "^2.1.0",
@@ -50,20 +49,22 @@
     "optimist": "^0.6.1",
     "primus": "^8.0.4",
     "qs": "^6.10.1",
-    "uglify-js": "^3.13.10",
+    "type-fest": "^2.0.0",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
     "ws": "^8.0.0"
   },
   "devDependencies": {
+    "@types/etag": "^1.8.1",
+    "@types/formidable": "^1.2.3",
     "@types/glob": "^7.1.4",
-    "@types/i18n": "^0.13.1",
     "@types/jest": "^26.0.24",
     "@types/mime": "^2.0.3",
     "@types/node": "^15.12.4",
     "@types/optimist": "^0.0.30",
     "@types/primus": "^7.3.5",
     "@types/puppeteer": "^5.4.4",
+    "@types/qs": "^6.9.7",
     "@types/uuid": "^8.3.1",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
